--- a/youtubeparser/src/main/AndroidManifest.xml
+++ b/youtubeparser/src/main/AndroidManifest.xml
@@ -1,9 +1,3 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest
     package="com.prof.youtubeparser">
-
-    <application android:allowBackup="true" android:label="@string/app_name"
-        android:supportsRtl="true">
-
-    </application>
-
 </manifest>
