--- a/samplejava/build.gradle
+++ b/samplejava/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion versions.compileSdk
 
     defaultConfig {
         applicationId "com.prof.youtubeparser.sample.java"
-        minSdkVersion 14
-        targetSdkVersion 28
+        minSdkVersion versions.minSdk
+        targetSdkVersion versions.targetSdk
         versionCode 30000
         versionName "3.0.0"
     }
@@ -22,21 +22,21 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     testImplementation 'junit:junit:4.12'
     implementation project(":youtubeparser")
-//    implementation 'com.prof.rssparser:rssparser:2.0.0'
+//    implementation 'com.prof.rssparser:rssparser:${versions.libVersionName}'
 
     // UI
-    implementation 'androidx.appcompat:appcompat:1.0.2'
-    implementation 'com.google.android.material:material:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.0.0'
-    implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation "androidx.appcompat:appcompat:${versions.appCompat}"
+    implementation "com.google.android.material:material:${versions.material}"
+    implementation "androidx.recyclerview:recyclerview:${versions.androidX}"
+    implementation "androidx.cardview:cardview:${versions.androidX}"
+    implementation "androidx.constraintlayout:constraintlayout:${versions.constraintLayout}"
 
     // Architecture components
-    implementation 'androidx.lifecycle:lifecycle-runtime:2.0.0'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    implementation "androidx.lifecycle:lifecycle-runtime:${versions.lifecycle}"
+    implementation "androidx.lifecycle:lifecycle-extensions:${versions.lifecycle}"
 
-    implementation 'com.squareup.picasso:picasso:2.71828'
-    implementation "com.squareup.okhttp3:okhttp:3.12.0"
+    implementation "com.squareup.picasso:picasso:${versions.picasso}"
+    implementation "com.squareup.okhttp3:okhttp:${versions.okhttp}"
 
 }
 
