--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,12 @@ buildscript {
     }
 }
 
+def getKey() {
+    Properties properties = new Properties()
+    properties.load(project.rootProject.file('local.properties').newDataInputStream())
+    return properties.getProperty("ytKey")
+}
+
 allprojects {
     repositories {
         maven {
