--- a/samplekotlin/build.gradle
+++ b/samplekotlin/build.gradle
@@ -11,6 +11,9 @@ android {
         targetSdkVersion 28
         versionCode 30000
         versionName "3.0.0"
+
+        buildConfigField "String", "KEY", "\""+getKey()+"\""
+
     }
     buildTypes {
         release {
