--- a/youtubeparser/build.gradle
+++ b/youtubeparser/build.gradle
@@ -26,6 +26,9 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${versions.kotlin}"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:${versions.coroutines}"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:${versions.coroutines}"
+
+    testImplementation "junit:junit:${versions.junit}"
+
 }
 
 
