Restore and improve java example

--- a/samplejava/build.gradle
+++ b/samplejava/build.gradle
@@ -12,6 +12,8 @@ android {
 
         buildConfigField "String", "KEY", "\""+getKey()+"\""
 
+        vectorDrawables.useSupportLibrary = true
+
     }
     buildTypes {
         release {
