--- a/samplekotlin/build.gradle
+++ b/samplekotlin/build.gradle
@@ -14,6 +14,8 @@ android {
 
         buildConfigField "String", "KEY", "\"" + getKey() + "\""
 
+        vectorDrawables.useSupportLibrary = true
+
     }
     buildTypes {
         release {
@@ -27,7 +29,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     testImplementation 'junit:junit:4.12'
     implementation project(":youtubeparser")
-//    implementation 'com.prof.rssparser:rssparser:${versions.libVersionName}'
+//    implementation "com.prof.youtubeparser:youtubeparser:${versions.libVersionName}"
 
     // UI
     implementation "androidx.appcompat:appcompat:${versions.appCompat}"
