--- a/build.gradle
+++ b/build.gradle
@@ -1,23 +1,26 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+apply plugin: "com.github.ben-manes.versions"
+
 buildscript {
 
     ext.versions = [
-            'libVersionCode'     : 30000,
-            'libVersionName'     : '3.0.0',
-            'compileSdk'         : 28,
+            'libVersionCode'     : 30001,
+            'libVersionName'     : '3.0.1',
+            'compileSdk'         : 30,
             'minSdk'             : 14,
-            'targetSdk'          : 28,
+            'targetSdk'          : 30,
             'okhttp'             : '3.12.0',
-            'gson'               : '2.8.5',
-            'coroutines'         : '1.1.1',
-            'kotlin'             : '1.3.31',
-            'buildTools'          : '28.0.3',
-            'appCompat'          : '1.0.2',
-            'constraintLayout'   : '1.1.3',
-            'material'           : '1.0.0',
+            'gson'               : '2.8.6',
+            'coroutines'         : '1.4.1',
+            'kotlin'             : '1.4.10',
+            'buildTools'          : '30.0.1',
+            'appCompat'          : '1.2.0',
+            'constraintLayout'   : '2.0.4',
+            'material'           : '1.2.1',
+            'swipe'              : '1.1.0',
             'androidx'           : '1.0.0',
-            'lifecycle'          : '2.0.0',
+            'lifecycle'          : '2.2.0',
             'picasso'            : '2.71828',
+            'activityAndroidx'   : '1.1.0',
 
             'junit'              : '4.12',
             'extJunit'           : '1.1.0',
@@ -36,14 +39,11 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.1'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.0'
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
+        classpath 'com.android.tools.build:gradle:4.1.1'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.5'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}"
         classpath "org.jetbrains.kotlin:kotlin-android-extensions:${versions.kotlin}"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath "com.github.ben-manes:gradle-versions-plugin:0.36.0"
     }
 }
 
