--- a/samplejava/build.gradle
+++ b/samplejava/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "com.prof.youtubeparser.sample.java"
         minSdkVersion versions.minSdk
         targetSdkVersion versions.targetSdk
-        versionCode 30000
-        versionName "3.0.0"
+        versionCode 30001
+        versionName "3.0.1"
 
         buildConfigField "String", "KEY", "\""+getKey()+"\""
 
@@ -35,6 +35,7 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:${versions.androidX}"
     implementation "androidx.cardview:cardview:${versions.androidX}"
     implementation "androidx.constraintlayout:constraintlayout:${versions.constraintLayout}"
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:${versions.swipe}"
 
     // Architecture components
     implementation "androidx.lifecycle:lifecycle-runtime:${versions.lifecycle}"
