--- a/youtubeparser/publish.gradle
+++ b/youtubeparser/publish.gradle
@@ -1,43 +1,21 @@
-apply plugin: 'maven-publish'
 apply plugin: 'com.jfrog.bintray'
 
 group 'com.prof.youtubeparser'
+version versions.libVersionName
 
-publishing {
-    publications {
-        Production(MavenPublication) {
-            artifact("$buildDir/outputs/aar/youtubeparser-release.aar")  {
-                builtBy tasks.getByName("assembleRelease")
-            }
-            groupId
-            artifactId 'youtubeparser'
-            version versions.libVersionName
-
-            pom.withXml {
-                def dependenciesNode = asNode().appendNode('dependencies')
-
-                // Iterate over the implementation dependencies (we don't want the test ones), adding a <dependency> node for each
-                configurations.implementation.allDependencies.each {
-                    // Ensure dependencies such as fileTree are not included in the pom.
-                    if (it.name != 'unspecified') {
-                        def dependencyNode = dependenciesNode.appendNode('dependency')
-                        dependencyNode.appendNode('groupId', it.group)
-                        dependencyNode.appendNode('artifactId', it.name)
-                        dependencyNode.appendNode('version', it.version)
-                    }
-                }
-            }
-        }
-    }
+project.ext {
+    mavGitUrl = 'https://github.com/prof18/YoutubeParser.git'
+    mavProjectName = 'YoutubeParser'
+    mavLibraryLicenses = ["Apache-2.0":'http://www.apache.org/licenses/LICENSE-2.0.txt']
+    mavLibraryDescription = "A library to parse Youtube video"
+    mavPublishToMavenLocal = true
+    mavSiteUrl = 'https://github.com/prof18/YoutubeParser'
 }
 
-def properties = new Properties()
-properties.load(new FileInputStream("local.properties"))
-
 bintray {
-    user = properties.getProperty("bintray.user")
-    key = properties.getProperty("bintray.apikey")
-    publications = ['Production']
+    user = System.getenv("bintrayUser")
+    key = System.getenv("bintrayApiKey")
+    publications = ['mavenPublish']
     configurations = ['archives']
     override = true
     pkg {
@@ -55,3 +33,5 @@ bintray {
         }
     }
 }
+
+apply from: 'https://raw.githubusercontent.com/sky-uk/gradle-maven-plugin/master/gradle-mavenizer.gradle'
