--- a/samplejava/src/main/AndroidManifest.xml
+++ b/samplejava/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
     package="com.prof.youtubeparser.sample.java">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
