--- a/samplekotlin/build.gradle
+++ b/samplekotlin/build.gradle
@@ -7,7 +7,7 @@ android {
 
     defaultConfig {
         applicationId "com.prof.youtubeparser.sample.kotlin"
-        minSdkVersion 14
+        minSdkVersion 15
         targetSdkVersion 30
         versionCode 30001
         versionName "3.0.1"
@@ -37,8 +37,8 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     testImplementation 'junit:junit:4.12'
-    implementation project(":youtubeparser")
-//    implementation "com.prof.youtubeparser:youtubeparser:${versions.libVersionName}"
+//    implementation project(":youtubeparser")
+    implementation "com.prof18.youtubeparser:youtubeparser:1.0"
 
     // UI
     implementation "androidx.appcompat:appcompat:${versions.appCompat}"
