--- a/build.gradle
+++ b/build.gradle
@@ -54,7 +54,7 @@ buildscript {
 def getKey() {
     Properties properties = new Properties()
     File propertiesFile = project.file('local.properties')
-    if (!propertiesFile.exists()) {
+    if (propertiesFile.exists()) {
         properties.load(propertiesFile.newDataInputStream())
         return properties.getProperty("ytKey")
     } else {
