Add action for release

--- a/.github/workflows/publish-library.yaml
+++ b/.github/workflows/publish-library.yaml
@@ -1,12 +1,9 @@
 name: Publish
 
 on:
-#  release:
-#    # We'll run this workflow when a new GitHub release is created
-#    types: [released]
-  push:
-    branches:
-      - develop
+  release:
+    # We'll run this workflow when a new GitHub release is created
+    types: [released]
 
 jobs:
   publish:
