--- a/build.gradle
+++ b/build.gradle
@@ -1,27 +1,30 @@
 apply plugin: "com.github.ben-manes.versions"
+apply plugin: 'io.github.gradle-nexus.publish-plugin'
+apply plugin: 'binary-compatibility-validator'
+apply from: "${rootDir}/gradle/publish-root.gradle"
 
 buildscript {
     ext.versions = [
-            'libVersionCode'     : 30002,
-            'libVersionName'     : '3.0.2',
-            'compileSdk'         : 30,
+            'libVersionCode'     : 30003,
+            'libVersionName'     : '3.0.3',
+            'compileSdk'         : 31,
             'minSdk'             : 14,
-            'targetSdk'          : 30,
-            'okhttp'             : '3.12.0', // LTS version, update until December 31, 2021.
-            'gson'               : '2.8.6',
-            'coroutines'         : '1.4.2',
-            'kotlin'             : '1.4.30',
+            'targetSdk'          : 31,
+            'okhttp'             : '3.12.13', // LTS version, update until December 31, 2021.
+            'gson'               : '2.8.9',
+            'coroutines'         : '1.5.2',
+            'kotlin'             : '1.5.31',
             'buildTools'         : '30.0.1',
-            'appCompat'          : '1.2.0',
-            'constraintLayout'   : '2.0.4',
-            'material'           : '1.3.0',
+            'appCompat'          : '1.3.1',
+            'constraintLayout'   : '2.1.1',
+            'material'           : '1.4.0',
             'swipe'              : '1.1.0',
             'androidx'           : '1.0.0',
-            'lifecycle'          : '2.3.0',
+            'lifecycle'          : '2.4.0',
             'picasso'            : '2.71828',
-            'activityAndroidx'   : '1.2.0',
-            'recyclerView'       : '1.1.0',
-            'lifecycleExtensions' : '2.2.0',
+            'activityAndroidx'   : '1.4.0',
+            'recyclerView'       : '1.2.1',
+            'lifecycleExtensions': '2.2.0',
 
             'junit'              : '4.13.2',
             'extJunit'           : '1.1.0',
@@ -30,24 +33,21 @@ buildscript {
 
     ]
 
-    ext.kotlin_version = '1.3.11'
     repositories {
         google()
         mavenCentral()
-        maven {
-            url  "https://dl.bintray.com/kotlin/dokka"
-        }
-        maven {
-            url "https://plugins.gradle.org/m2/"
-        }
+        maven { url "https://dl.bintray.com/kotlin/dokka" }
+        maven { url "https://plugins.gradle.org/m2/" }
 
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.2'
+        classpath 'com.android.tools.build:gradle:7.0.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}"
         classpath "org.jetbrains.kotlin:kotlin-android-extensions:${versions.kotlin}"
-        classpath "com.github.ben-manes:gradle-versions-plugin:0.36.0"
-        classpath "org.jetbrains.dokka:dokka-gradle-plugin:1.4.20"
+        classpath "com.github.ben-manes:gradle-versions-plugin:0.39.0"
+        classpath "org.jetbrains.dokka:dokka-gradle-plugin:1.5.31"
+        classpath 'io.github.gradle-nexus:publish-plugin:1.1.0'
+        classpath "org.jetbrains.kotlinx:binary-compatibility-validator:0.8.0"
     }
 }
 
@@ -66,11 +66,7 @@ allprojects {
     repositories {
         google()
         mavenCentral()
-        maven {
-            url = "https://dl.bintray.com/kotlin/dokka"
-        }
-        // org.jetbrains.trove4j:trove4j:20160824.
-        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+        maven { url = "https://dl.bintray.com/kotlin/dokka" }
     }
 }
 
