--- a/youtubeparser/build.gradle
+++ b/youtubeparser/build.gradle
@@ -7,7 +7,7 @@ ext {
     PUBLISH_ARTIFACT_ID = 'youtubeparser'
 }
 
-apply from: "${rootProject.projectDir}/gradle/publish-mavencentral.gradle"
+apply from: "${rootProject.projectDir}/gradle/publish-module.gradle"
 
 android {
     compileSdkVersion versions.compileSdk
